# mtsearch

./: .gitignore  CMakeLists.txt  CommandLine.cpp  CommandLine.h  FileReading.cpp  FileReading.h  Finding.cpp  Finding.h  Matching.cpp  Matching.h  README.md  TestCommandLine.cpp  TestFileReading.cpp  TestFinding.cpp  TestMatching.cpp  Utils.h  main.cpp
test/: .gitignore  run.sh
test/case_01/: in  mask
test/case_02/: 1.out  in  mask
test/case_03/: in  mask
test/case_04/: 1.out  in
test/case_05/: 1.out  in
test/case_06/: 1.out  in  mask
test/case_07/: 1.out  2.out  in  mask
